tests/snapshots/snapshots__budget_dotenv_lib_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1985 words)

cli-options.js
     1→const re = /^dotenv_config_(encoding|path|quiet|debug|override|DOTENV_KEY)=(.+)$/
env-options.js
     2→const options = {}
main.d.ts
     3→import type { URL } from 'url';
     5→export interface DotenvParseOutput {
     6→  [name: string]: string;
     7→}
     9→export interface DotenvPopulateOutput {
    10→  [name: string]: string;
    11→}
    25→export interface DotenvConfigOptions {
    26→  /**
    27→   * Default: `path.resolve(process.cwd(), '.env')`
    28→   *
    29→   * Specify a custom path if your file containing environment variables is located elsewhere.
    30→   * Can also be an array of strings, specifying multiple paths.
    31→   *
    32→   * example: `require('dotenv').config({ path: '/custom/path/to/.env' })`
    33→   * example: `require('dotenv').config({ path: ['/path/to/first.env', '/path/to/second.env'] })`
    34→   */
    35→  path?: string | string[] | URL;
    36→
    37→  /**
    38→   * Default: `utf8`
    39→   *
    40→   * Specify the encoding of your file containing environment variables.
    41→   *
    42→   * example: `require('dotenv').config({ encoding: 'latin1' })`
    43→   */
    44→  encoding?: string;
    45→
    46→  /**
    47→   * Default: `false`
    48→   *
    49→   * Suppress all output (except errors).
    50→   *
    51→   * example: `require('dotenv').config({ quiet: true })`
    52→   */
    53→  quiet?: boolean;
    54→
    55→  /**
    56→   * Default: `false`
    57→   *
    58→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
    59→   *
    60→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
    61→   */
    62→  debug?: boolean;
    63→
    64→  /**
    65→   * Default: `false`
    66→   *
    67→   * Override any environment variables that have already been set on your machine with values from your .env file.
    68→   *
    69→   * example: `require('dotenv').config({ override: true })`
    70→   */
    71→  override?: boolean;
    72→
    73→  /**
    74→   * Default: `process.env`
    75→   *
    76→   * Specify an object to write your secrets to. Defaults to process.env environment variables.
    77→   *
    78→   * example: `const processEnv = {}; require('dotenv').config({ processEnv: processEnv })`
    79→   */
    80→  processEnv?: DotenvPopulateInput;
    81→
    82→  /**
    83→   * Default: `undefined`
    84→   *
    85→   * Pass the DOTENV_KEY directly to config options. Defaults to looking for process.env.DOTENV_KEY environment variable. Note this only applies to decrypting .env.vault files. If passed as null or undefined, or not passed at all, dotenv falls back to its traditional job of parsing a .env file.
    86→   *
    87→   * example: `require('dotenv').config({ DOTENV_KEY: 'dotenv://:key_1234…@dotenvx.com/vault/.env.vault?environment=production' })`
    88→   */
    89→  DOTENV_KEY?: string;
    90→}
    92→export interface DotenvConfigOutput {
    93→  error?: DotenvError;
    94→  parsed?: DotenvParseOutput;
    95→}
    97→type DotenvError = Error & {
    98→  code: 
    99→    | 'MISSING_DATA'
   100→    | 'INVALID_DOTENV_KEY'
   101→    | 'NOT_FOUND_DOTENV_ENVIRONMENT'
   102→    | 'DECRYPTION_FAILED'
   103→    | 'OBJECT_REQUIRED';
   104→}
   106→export interface DotenvPopulateOptions {
   107→  /**
   108→   * Default: `false`
   109→   *
   110→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
   111→   *
   112→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
   113→   */
   114→  debug?: boolean;
   115→
   116→  /**
   117→   * Default: `false`
   118→   *
   119→   * Override any environment variables that have already been set on your machine with values from your .env file.
   120→   *
   121→   * example: `require('dotenv').config({ override: true })`
   122→   */
   123→  override?: boolean;
   124→}
   126→export interface DotenvPopulateInput {
   127→  [name: string]: string | undefined;
   128→}
main.js
     7→const version = packageJson.version
    10→const TIPS = [
    11→  '🔐 encrypt with Dotenvx: https://dotenvx.com',
    12→  '🔐 prevent committing .env to code: https://dotenvx.com/precommit',
    13→  '🔐 prevent building .env in docker: https://dotenvx.com/prebuild',
    14→  '🤖 agentic secret storage: https://dotenvx.com/as2',
    15→  '⚡️ secrets for agents: https://dotenvx.com/as2',
    16→  '🛡️ auth for agents: https://vestauth.com',
    17→  '🛠️  run anywhere with `dotenvx run -- yourcommand`',
    18→  '⚙️  specify custom .env file path with { path: \'/custom/path/.env\' }',
    19→  '⚙️  enable debug logging with { debug: true }',
    20→  '⚙️  override existing env vars with { override: true }',
    21→  '⚙️  suppress all logs with { quiet: true }',
    22→  '⚙️  write to custom object with { processEnv: myObject }',
    23→  '⚙️  load multiple .env files with { path: [\'.env.local\', \'.env\'] }'
    24→]
    27→function _getRandomTip () {
    28→  return TIPS[Math.floor(Math.random() * TIPS.length)]
    29→}
    31→function parseBoolean (value) {
    32→  if (typeof value === 'string') {
    33→    return !['false', '0', 'no', 'off', ''].includes(value.toLowerCase())
    34→  }
    35→  return Boolean(value)
    36→}
    38→function supportsAnsi () {
    39→  return process.stdout.isTTY // && process.env.TERM !== 'dumb'
    40→}
    42→function dim (text) {
    43→  return supportsAnsi() ? `\x1b[2m${text}\x1b[0m` : text
    44→}
    46→const LINE = /(?:^|^)\s*(?:export\s+)?([\w.-]+)(?:\s*=\s*?|:\s+?)(\s*'(?:\\'|[^'])*'|\s*"(?:\\"|[^"])*"|\s*`(?:\\`|[^`])*`|[^#\r\n]+)?\s*(?:#.*)?(?:$|$)/mg
    49→function parse (src) {
    50→  const obj = {}
    51→
    52→  // Convert buffer to string
    53→  let lines = src.toString()
    54→
    55→  // Convert line breaks to same format
    56→  lines = lines.replace(/\r\n?/mg, '\n')
    57→
    58→  let match
    59→  while ((match = LINE.exec(lines)) != null) {
    60→    const key = match[1]
    61→
    62→    // Default undefined or null to empty string
    63→    let value = (match[2] || '')
    64→
    65→    // Remove whitespace
    66→    value = value.trim()
    67→
    68→    // Check if double quoted
    69→    const maybeQuote = value[0]
    70→
    71→    // Remove surrounding quotes
    72→    value = value.replace(/^(['"`])([\s\S]*)\1$/mg, '$2')
    73→
    74→    // Expand newlines if double quoted
    75→    if (maybeQuote === '"') {
    76→      value = value.replace(/\\n/g, '\n')
    77→      value = value.replace(/\\r/g, '\r')
    78→    }
    79→
    80→    // Add to object
    81→    obj[key] = value
    82→  }
    83→
      →…
    87→function _parseVault (options) {
    88→  options = options || {}
    89→
    90→  const vaultPath = _vaultPath(options)
    91→  options.path = vaultPath // parse .env.vault
    92→  const result = DotenvModule.configDotenv(options)
    93→  if (!result.parsed) {
    94→    const err = new Error(`MISSING_DATA: Cannot parse ${vaultPath} for an unknown reason`)
    95→    err.code = 'MISSING_DATA'
    96→    throw err
    97→  }
    98→
    99→  // handle scenario for comma separated keys - for use with key rotation
   100→  // example: DOTENV_KEY="dotenv://:key_1234@dotenvx.com/vault/.env.vault?environment=prod,dotenv://:key_7890@dotenvx.com/vault/.env.vault?environment=prod"
   101→  const keys = _dotenvKey(options).split(',')
   102→  const length = keys.length
   103→
   104→  let decrypted
   105→  for (let i = 0; i < length; i++) {
   106→    try {
   107→      // Get full key
   108→      const key = keys[i].trim()
   109→
   110→      // Get instructions for decrypt
   111→      const attrs = _instructions(result, key)
   112→
   113→      // Decrypt
   114→      decrypted = DotenvModule.decrypt(attrs.ciphertext, attrs.key)
   115→
   116→      break
   117→    } catch (error) {
   118→      // last key
   119→      if (i + 1 >= length) {
   120→        throw error
   121→      }
      →…
   130→function _warn (message) {
   131→  console.error(`[dotenv@${version}][WARN] ${message}`)
   132→}
   134→function _debug (message) {
   135→  console.log(`[dotenv@${version}][DEBUG] ${message}`)
   136→}
   138→function _log (message) {
   139→  console.log(`[dotenv@${version}] ${message}`)
   140→}
   142→function _dotenvKey (options) {
   143→  // prioritize developer directly setting options.DOTENV_KEY
   144→  if (options && options.DOTENV_KEY && options.DOTENV_KEY.length > 0) {
   145→    return options.DOTENV_KEY
   146→  }
   147→
   148→  // secondary infra already contains a DOTENV_KEY environment variable
   149→  if (process.env.DOTENV_KEY && process.env.DOTENV_KEY.length > 0) {
   150→    return process.env.DOTENV_KEY
   151→  }
   152→
   153→  // fallback to empty string
   154→  return ''
   155→}
   157→function _instructions (result, dotenvKey) {
   158→  // Parse DOTENV_KEY. Format is a URI
   159→  let uri
   160→  try {
   161→    uri = new URL(dotenvKey)
   162→  } catch (error) {
   163→    if (error.code === 'ERR_INVALID_URL') {
   164→      const err = new Error('INVALID_DOTENV_KEY: Wrong format. Must be in valid uri format like dotenv://:key_1234@dotenvx.com/vault/.env.vault?environment=development')
   165→      err.code = 'INVALID_DOTENV_KEY'
   166→      throw err
   167→    }
   168→
   169→    throw error
   170→  }
   171→
   172→  // Get decrypt key
   173→  const key = uri.password
   174→  if (!key) {
   175→    const err = new Error('INVALID_DOTENV_KEY: Missing key part')
   176→    err.code = 'INVALID_DOTENV_KEY'
   177→    throw err
   178→  }
   179→
   180→  // Get environment
   181→  const environment = uri.searchParams.get('environment')
   182→  if (!environment) {
   183→    const err = new Error('INVALID_DOTENV_KEY: Missing environment part')
   184→    err.code = 'INVALID_DOTENV_KEY'
   185→    throw err
   186→  }
   187→
   188→  // Get ciphertext payload
   189→  const environmentKey = `DOTENV_VAULT_${environment.toUpperCase()}`
   190→  const ciphertext = result.parsed[environmentKey] // DOTENV_VAULT_PRODUCTION
   191→  if (!ciphertext) {
      →…
   200→function _vaultPath (options) {
   201→  let possibleVaultPath = null
   202→
   203→  if (options && options.path && options.path.length > 0) {
   204→    if (Array.isArray(options.path)) {
   205→      for (const filepath of options.path) {
   206→        if (fs.existsSync(filepath)) {
   207→          possibleVaultPath = filepath.endsWith('.vault') ? filepath : `${filepath}.vault`
   208→        }
   209→      }
   210→    } else {
   211→      possibleVaultPath = options.path.endsWith('.vault') ? options.path : `${options.path}.vault`
   212→    }
   213→  } else {
   214→    possibleVaultPath = path.resolve(process.cwd(), '.env.vault')
   215→  }
   216→
   217→  if (fs.existsSync(possibleVaultPath)) {
   218→    return possibleVaultPath
   219→  }
   220→
   221→  return null
   222→}
   224→function _resolveHome (envPath) {
   225→  return envPath[0] === '~' ? path.join(os.homedir(), envPath.slice(1)) : envPath
   226→}
   228→function _configVault (options) {
   229→  const debug = parseBoolean(process.env.DOTENV_CONFIG_DEBUG || (options && options.debug))
   230→  const quiet = parseBoolean(process.env.DOTENV_CONFIG_QUIET || (options && options.quiet))
   231→
   232→  if (debug || !quiet) {
   233→    _log('Loading env from encrypted .env.vault')
   234→  }
   235→
   236→  const parsed = DotenvModule._parseVault(options)
   237→
   238→  let processEnv = process.env
   239→  if (options && options.processEnv != null) {
   240→    processEnv = options.processEnv
   241→  }
   242→
   243→  DotenvModule.populate(processEnv, parsed, options)
   244→
   245→  return { parsed }
   246→}
   248→function configDotenv (options) {
   249→  const dotenvPath = path.resolve(process.cwd(), '.env')
   250→  let encoding = 'utf8'
   251→  let processEnv = process.env
   252→  if (options && options.processEnv != null) {
   253→    processEnv = options.processEnv
   254→  }
   255→  let debug = parseBoolean(processEnv.DOTENV_CONFIG_DEBUG || (options && options.debug))
   256→  let quiet = parseBoolean(processEnv.DOTENV_CONFIG_QUIET || (options && options.quiet))
   257→
   258→  if (options && options.encoding) {
   259→    encoding = options.encoding
   260→  } else {
   261→    if (debug) {
   262→      _debug('No encoding is specified. UTF-8 is used by default')
   263→    }
   264→  }
   265→
   266→  let optionPaths = [dotenvPath] // default, look for .env
   267→  if (options && options.path) {
   268→    if (!Array.isArray(options.path)) {
   269→      optionPaths = [_resolveHome(options.path)]
   270→    } else {
   271→      optionPaths = [] // reset default
   272→      for (const filepath of options.path) {
   273→        optionPaths.push(_resolveHome(filepath))
   274→      }
   275→    }
   276→  }
   277→
   278→  // Build the parsed data in a temporary object (because we need to return it).  Once we have the final
   279→  // parsed data, we will combine it with process.env (or options.processEnv if provided).
   280→  let lastError
   281→  const parsedAll = {}
   282→  for (const path of optionPaths) {
      →…
   328→function config (options) {
   329→  // fallback to original dotenv if DOTENV_KEY is not set
   330→  if (_dotenvKey(options).length === 0) {
   331→    return DotenvModule.configDotenv(options)
   332→  }
   333→
   334→  const vaultPath = _vaultPath(options)
   335→
   336→  // dotenvKey exists but .env.vault file does not exist
   337→  if (!vaultPath) {
   338→    _warn(`You set DOTENV_KEY but you are missing a .env.vault file at ${vaultPath}. Did you forget to build it?`)
   339→
   340→    return DotenvModule.configDotenv(options)
   341→  }
   342→
   343→  return DotenvModule._configVault(options)
   344→}
   346→function decrypt (encrypted, keyStr) {
   347→  const key = Buffer.from(keyStr.slice(-64), 'hex')
   348→  let ciphertext = Buffer.from(encrypted, 'base64')
   349→
   350→  const nonce = ciphertext.subarray(0, 12)
   351→  const authTag = ciphertext.subarray(-16)
   352→  ciphertext = ciphertext.subarray(12, -16)
   353→
   354→  try {
   355→    const aesgcm = crypto.createDecipheriv('aes-256-gcm', key, nonce)
   356→    aesgcm.setAuthTag(authTag)
   357→    return `${aesgcm.update(ciphertext)}${aesgcm.final()}`
   358→  } catch (error) {
   359→    const isRange = error instanceof RangeError
   360→    const invalidKeyLength = error.message === 'Invalid key length'
   361→    const decryptionFailed = error.message === 'Unsupported state or unable to authenticate data'
   362→
   363→    if (isRange || invalidKeyLength) {
   364→      const err = new Error('INVALID_DOTENV_KEY: It must be 64 characters long (or more)')
   365→      err.code = 'INVALID_DOTENV_KEY'
   366→      throw err
   367→    } else if (decryptionFailed) {
   368→      const err = new Error('DECRYPTION_FAILED: Please check your DOTENV_KEY')
   369→      err.code = 'DECRYPTION_FAILED'
   370→      throw err
   371→    } else {
   372→      throw error
   373→    }
   374→  }
   375→}
   378→function populate (processEnv, parsed, options = {}) {
   379→  const debug = Boolean(options && options.debug)
   380→  const override = Boolean(options && options.override)
   381→  const populated = {}
   382→
   383→  if (typeof parsed !== 'object') {
   384→    const err = new Error('OBJECT_REQUIRED: Please check the processEnv argument being passed to populate')
   385→    err.code = 'OBJECT_REQUIRED'
   386→    throw err
   387→  }
   388→
   389→  // Set process.env
   390→  for (const key of Object.keys(parsed)) {
   391→    if (Object.prototype.hasOwnProperty.call(processEnv, key)) {
   392→      if (override === true) {
   393→        processEnv[key] = parsed[key]
   394→        populated[key] = parsed[key]
   395→      }
   396→
   397→      if (debug) {
   398→        if (override === true) {
   399→          _debug(`"${key}" is already defined and WAS overwritten`)
   400→        } else {
   401→          _debug(`"${key}" is already defined and was NOT overwritten`)
   402→        }
   403→      }
   404→    } else {
   405→      processEnv[key] = parsed[key]
   406→      populated[key] = parsed[key]
   407→    }
   408→  }
   409→
   410→  return populated
   411→}
   413→const DotenvModule = {
   414→  configDotenv,
   415→  _configVault,
   416→  _parseVault,
   417→  config,
   418→  decrypt,
   419→  parse,
   420→  populate
   421→}
