tests/snapshots/snapshots__budget_dotenv_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (11 words)

CHANGELOG.md
CONTRIBUTING.md
README-es.md
README.md
SECURITY.md
config.d.ts
config.js
lib/cli-options.js
lib/env-options.js
lib/main.d.ts
lib/main.js
